--- a/eventicoUI/src/styles.css
+++ b/eventicoUI/src/styles.css
@@ -5,9 +5,14 @@ body
    padding: 0px;
 }
 
+
+
 .screen-div {
-    width: 100%;
-    text-align: center;
+	border-bottom: 50px solid #cccbcb;
+	border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	height: 0;
+	width: 125px;
 }
 
 .layout-card
@@ -28,6 +33,11 @@ body
   > .mat-card-content {
     overflow-y: auto;
   }
+}
+
+.responsive {
+    max-width: 100%;
+    height: auto;
 }
 
 .seat-col
