--- a/eventicoUI/src/app/header/header.component.html
+++ b/eventicoUI/src/app/header/header.component.html
@@ -3,17 +3,16 @@
     <a href="" routerLink=""><img class="logo" src="https://algovent-s3-static.s3.amazonaws.com/eventico/media/TOTT_Logo_New.png" alt="talk-of-the-town"></a>
 
     <span class="tollbar-splitter"></span>
-    <button *ngIf="loggedIn" mat-icon-button ><mat-icon aria-label="Settings" [style.color]="'#000'">settings</mat-icon></button>
-    <button *ngIf="loggedIn" mat-icon-button (click)="logout()"><mat-icon [style.color]="'#000'" aria-label="Settings">exit_to_app</mat-icon></button>
     <button *ngIf="loggedIn == false" mat-button routerLink="login" [style.color]="'#000'">LOGIN</button>
     <button *ngIf="loggedIn == false" mat-button routerLink="signup" [style.color]="'#000'">SIGNUP</button>
     <div *ngIf="loggedIn">
     <mat-menu #notifications="matMenu" yPosition="below" xPosition="before">
-      <button mat-menu-item>notification 1</button>
-      <button mat-menu-item>notification 2</button>
+      <button mat-menu-item><mat-icon [style.color]="'#000'">history</mat-icon>bookings</button>
+      <button mat-menu-item><mat-icon [style.color]="'#000'">settings</mat-icon>settings</button>
+      <button mat-menu-item (click)="logout()"><mat-icon [style.color]="'#000'">exit_to_app</mat-icon>logout</button>
     </mat-menu>
     <button mat-icon-button [matMenuTriggerFor]="notifications" *ngIf="loggedIn">
-      <mat-icon [style.color]="'#000'">notifications</mat-icon>
+      <mat-icon [style.color]="'#000'">person</mat-icon>
     </button>
     </div>
 
