--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 {% load static %}
 {% load staticfiles %}
+{% load django_seo_js %}
 <!doctype html>
 <html lang="en">
 <head>
+  {% seo_js_head %}
   <meta charset="utf-8">
   <title>Eventico</title>
   <base href="/">
