sample seo content

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
   <meta name="twitter:site" content="@nytimesbits" />
   <meta name="twitter:creator" content="@nickbilton" />
   <meta property="og:url" content="http://bits.blogs.nytimes.com/2011/12/08/a-twitter-for-my-sister/" />
-  <meta property="og:title" content={{metadata_details['title']}} />
-  <meta property="og:description" content={{metadata_details['desc']}} />
-  <meta property="og:image" content={{metadata_details['image_url']}} />
-  
+  <meta property="og:title" content="{{ title }}" />
+  <meta property="og:description" content="{{ desc }}" />
+  <meta property="og:image" content="{{ image_url }}" />
+
   <title>Eventico</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
