--- a/eventicoUI/src/app/header/header.component.html
+++ b/eventicoUI/src/app/header/header.component.html
@@ -26,7 +26,7 @@
   <button mat-button routerLink="event-venues"><mat-icon aria-label="Settings">movie_creation</mat-icon> <span class="responsive_span_text">Event Venues</span></button>
   <span class="admin-tollbar-spacer"></span>
   <mat-menu #addon_tools="matMenu" class="addon-tools" yPosition="below" xPosition="before">
-    <button mat-menu-item routerLink=""><mat-icon aria-label="Settings">find_replace</mat-icon> User Management</button>
+    <button mat-menu-item routerLink="users"><mat-icon aria-label="Settings">find_replace</mat-icon> User Management</button>
     <button mat-menu-item routerLink=""><mat-icon aria-label="Settings">cloud_download</mat-icon> Reports</button>
   </mat-menu>
 
