--- a/eventicoUI/src/app/event-user/login/login.component.html
+++ b/eventicoUI/src/app/event-user/login/login.component.html
@@ -15,7 +15,7 @@
   </form>
   <mat-divider></mat-divider>
   <mat-card-actions>
-    <button mat-button  color="primary"><i class="material-icons md-dark">book</i> Facebook</button>
-    <button mat-button  color="primary"><i class="material-icons md-dark">book</i> Google</button>
+    <button mat-button  (click)="socialSignIn('facebook')" color="primary"><i class="material-icons md-dark">book</i> Facebook</button>
+    <button mat-button  (click)="socialSignIn('google')"  color="primary"><i class="material-icons md-dark">book</i> Google</button>
   </mat-card-actions>
 </mat-card>
