login page renovation

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,11 +72,11 @@
 
   </style>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   {% for css_file_name in css_list %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/' %}{{ css_file_name }}" />
   {% endfor %}
-
 
 </head>
 <body>
