--- a/eventicoUI/src/app/event-user/login/login.component.html
+++ b/eventicoUI/src/app/event-user/login/login.component.html
@@ -1,21 +1,63 @@
 <mat-card class="login-card">
-  <mat-card-title class="login-title">LOGIN</mat-card-title>
-  <form class="login-form" #userLoginForm="ngForm" (ngSubmit)="onLogin(userLoginForm)">
-  <mat-card-content>
-      <mat-form-field class="full-width">
-        <input matInput placeholder="Email" #Email="ngModel" [(ngModel)]="user.Email" name="Email" required>
-      </mat-form-field>
-      <mat-form-field class="full-width">
-        <input matInput placeholder="Password" type="password" #Password="ngModel" [(ngModel)]="user.Password" name="Password" required>
-      </mat-form-field>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button class="full-width" color="primary">Login</button>
-  </mat-card-actions>
+  <div class="container">
+  <form #userLoginForm="ngForm" (ngSubmit)="onLogin(userLoginForm)">
+    <div class="row">
+      <h2 style="text-align:center"></h2>
+      <div class="vl">
+        <span class="vl-innertext">or</span>
+      </div>
+
+      <div class="col">
+        <a (click)="socialSignIn('facebook')" class="fb btn">
+          <i class="fa fa-facebook fa-fw"></i> Login with Facebook
+        </a>
+        <a (click)="socialSignIn('google')" class="google btn"><i class="fa fa-google fa-fw">
+          </i> Login with Google+
+        </a>
+      </div>
+
+      <div class="col">
+        <div class="hide-md-lg">
+          <p>Or</p>
+        </div>
+
+        <input type="text" #Email="ngModel" name="Email" placeholder="Username" [(ngModel)]="user.Email" required>
+        <input type="password" #Password="ngModel" name="Password" placeholder="Password" [(ngModel)]="user.Password" required>
+        <input type="submit" value="Login">
+      </div>
+
+    </div>
   </form>
-  <mat-divider></mat-divider>
-  <mat-card-actions>
-    <button mat-button  (click)="socialSignIn('facebook')" color="primary"><i class="material-icons md-dark">book</i> Facebook</button>
-    <button mat-button  (click)="socialSignIn('google')"  color="primary"><i class="material-icons md-dark">book</i> Google</button>
-  </mat-card-actions>
+</div>
+
+<div class="bottom-container">
+  <div class="row">
+    <div class="col">
+      <a [routerLink]="['/signup']"  style="color:white" class="btn">Sign up</a>
+    </div>
+    <div class="col">
+      <a href="#" style="color:white" class="btn">Forgot password?</a>
+    </div>
+  </div>
+</div>
 </mat-card>
+<!--<mat-card-title class="login-title">LOGIN</mat-card-title>-->
+  <!--<form class="login-form" #userLoginForm="ngForm" (ngSubmit)="onLogin(userLoginForm)">-->
+  <!--<mat-card-content>-->
+      <!--<mat-form-field class="full-width">-->
+        <!--<input matInput placeholder="Email" #Email="ngModel" [(ngModel)]="user.Email" name="Email" required>-->
+      <!--</mat-form-field>-->
+      <!--<mat-form-field class="full-width">-->
+        <!--<input matInput placeholder="Password" type="password" #Password="ngModel" [(ngModel)]="user.Password" name="Password" required>-->
+      <!--</mat-form-field>-->
+  <!--</mat-card-content>-->
+  <!--<mat-card-actions>-->
+    <!--<button mat-raised-button class="full-width" color="primary">Login</button>-->
+  <!--</mat-card-actions>-->
+  <!--</form>-->
+  <!--<mat-divider></mat-divider>-->
+  <!--<mat-card-actions>-->
+    <!--<button mat-button  (click)="socialSignIn('facebook')" color="primary"><i class="material-icons md-dark">book</i> Facebook</button>-->
+    <!--<button mat-button  (click)="socialSignIn('google')"  color="primary"><i class="material-icons md-dark">book</i> Google</button>-->
+  <!--</mat-card-actions>-->
+
