--- a/eventicoUI/src/app/event-types/event-types.component.html
+++ b/eventicoUI/src/app/event-types/event-types.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar class="events-filter-toolbar">
   <mat-toolbar-row>
     <span class="tollbar-splitter"></span>
-    <button *ngIf="permissions['new_event_type'] == true" mat-button routerLink="event-type"><i class="material-icons md-dark">playlist_add</i> New Event Type</button>
+    <button *ngIf="permissions['new_event_type'] == true" mat-button (click)="new_event_type()"><i class="material-icons md-dark">playlist_add</i> New Event Type</button>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-divider></mat-divider>
@@ -14,7 +14,7 @@
     <p matLine>
           <span> {{ eventType.Desc }} </span>
     </p>
-    <button matTooltip="Edit Permissions" *ngIf="permissions['edit_event_type'] == true" (click)="goto_permission_view(role)" mat-icon-button><mat-icon>edit</mat-icon></button>
+    <button matTooltip="Edit Permissions" *ngIf="permissions['edit_event_type'] == true" (click)="edit_event_type(eventType)" mat-icon-button><mat-icon>edit</mat-icon></button>
     <mat-divider></mat-divider>
   </mat-list-item>
 </mat-list>
