location angular model updated

--- a/eventicoUI/src/app/event-venues/new-event-venue/new-event-venue.component.html
+++ b/eventicoUI/src/app/event-venues/new-event-venue/new-event-venue.component.html
@@ -18,7 +18,7 @@
             </mat-form-field>
 
             <mat-form-field class="full-width">
-              <input matInput placeholder="Name" #Name="ngModel" [(ngModel)]="eventVenue.Name" name="Name" required>
+              <input matInput placeholder="Name" #Name="ngModel" [(ngModel)]="venueLocation.Name" name="Name" required>
             </mat-form-field>
             <mat-form-field class="full-width">
               <textarea matInput placeholder="Description" #Desc="ngModel" [(ngModel)]="eventVenue.Desc" name="Description" required></textarea>
